crates/swc_ecma_parser/tests/test262-error-references/fail/f3bcafbbae99ba29.js.stderr
error: Unexpected token `}`. Expected identifier
 --> $DIR/tests/test262-parser/fail/f3bcafbbae99ba29.js:1:7
  |
1 | ({ 42 }) = obj
  |       ^

